<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/img_description"
        android:src="@drawable/bg"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:contentDescription="@string/img_description"
                android:layout_gravity="center_horizontal"
                android:layout_width="230dp"
                android:layout_height="230dp"
                android:src="@drawable/logo"/>

            <TextView
                android:textSize="35sp"
                android:textStyle="bold"
                android:fontFamily="casual"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/btn_sica"
                android:text="@string/sica"
                android:background="@drawable/bg_red_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_friendzone"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_red_button"
                android:text="@string/friendzone"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_one_year"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_red_button"
                android:text="@string/one_year"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_three_year"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_red_button"
                android:text="@string/three_year"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>